--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@supabase/supabase-js": "^2.58.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "fetch": "^1.1.0",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.7"
   }
 }
